--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.westosia</groupId>
-    <artifactId>Boilerplate</artifactId>
+    <artifactId>GodPowers</artifactId>
     <version>0.0.1</version>
 
     <repositories>
